2013-09-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* index.php: fixed the check login parameter.

2013-09-30  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/pChart/pPie.class.php: Fix reversed colors bug in
	3D pie graphs

	* godmode/reporting/reporting_builder.item_editor.php: Hide Server combo
	when metaconsole is not enabled.

	* include/javascript/jquery.pandora.js: Increase width of license
	dialog

2013-09-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_agents.php: added code for to delete the nodes
	of any agent when it is deleted.

2013-09-30  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ar.mo
	  include/languages/ar.po
	  include/languages/ast.mo
	  include/languages/ast.po
	  include/languages/bn.mo
	  include/languages/bn.po
	  include/languages/bg.mo
	  include/languages/bg.po
	  include/languages/ca.mo
	  include/languages/ca.po
 	  include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/da.mo
	  include/languages/da.po
	  include/languages/de.mo
	  include/languages/de.po
	  include/languages/el.mo
	  include/languages/el.po
	  include/languages/en.mo
	  include/languages/en.po
	  include/languages/en_AU.mo
	  include/languages/en_AU.po
	  include/languages/en_GB.mo
	  include/languages/en_GB.po
	  include/languages/es.mo
	  include/languages/es.po
	  include/languages/et.mo
	  include/languages/et.po
	  include/languages/eu.mo
	  include/languages/eu.po
	  include/languages/fa.po
	  include/languages/fa.mo
	  include/languages/fi.po
	  include/languages/fi.mo
	  include/languages/fr.po
	  include/languages/fr.mo
	  include/languages/gl.po
	  include/languages/gl.mo
	  include/languages/he.po
	  include/languages/he.mo
	  include/languages/hi.po
	  include/languages/hi.mo
	  include/languages/hu.po
	  include/languages/hu.mo
	  include/languages/it.po
	  include/languages/it.mo
	  include/languages/ja.po
	  include/languages/ja.mo
	  include/languages/ko.po
	  include/languages/ko.mo